# multi-agent-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
agents/: llm.py  main_agent.py  session.py
agents/subagents/: document_qa.py
agents/subagents/appointment_agent/: appointment.py  tools.py
app/: app.py
app/routes/: upload.py
app/routes/user/: chat.py  search.py  upload.py
app/services/: database.py  db_operations.py  embeddings.py  file_processor.py  file_saving.py  similarity_search.py
app/services/db_services/: database.py  db_operations.py  models.py
app/services/file_upload/: file_processor.py  file_saving.py
app/services/search/: similarity_search.py
